--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,7 +1,7 @@
 # DataSource
 hibernate.connection.driver_class = org.postgresql.Driver
 hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-hibernate.connection.url = jdbc:postgresql://localhost:5432/hh
+hibernate.connection.url = jdbc:postgresql://postgres:5432/hh
 hibernate.connection.username = hh
 hibernate.connection.password = hh
 hibernate.current_session_context_class = thread
